# kxmlrpcclient

./: .git-blame-ignore-revs  .kde-ci.yml  .reviewboardrc  CMakeLists.txt  KF5XmlRpcClientConfig.cmake.in  README.md  kxmlrpcclient.categories  kxmlrpcclient.renamecategories  metainfo.yaml
autotests/: CMakeLists.txt  clienttest.cpp  clienttest.h  querytest.cpp  querytest.h
po/ar/: libkxmlrpcclient5.po
po/ast/: libkxmlrpcclient5.po
po/az/: libkxmlrpcclient5.po
po/be/: libkxmlrpcclient5.po
po/bg/: libkxmlrpcclient5.po
po/bs/: libkxmlrpcclient5.po
po/ca/: libkxmlrpcclient5.po
po/ca@valencia/: libkxmlrpcclient5.po
po/cs/: libkxmlrpcclient5.po
po/da/: libkxmlrpcclient5.po
po/de/: libkxmlrpcclient5.po
po/el/: libkxmlrpcclient5.po
po/en_GB/: libkxmlrpcclient5.po
po/eo/: libkxmlrpcclient5.po
po/es/: libkxmlrpcclient5.po
po/et/: libkxmlrpcclient5.po
po/eu/: libkxmlrpcclient5.po
po/fi/: libkxmlrpcclient5.po
po/fr/: libkxmlrpcclient5.po
po/ga/: libkxmlrpcclient5.po
po/gd/: libkxmlrpcclient5.po
po/gl/: libkxmlrpcclient5.po
po/he/: libkxmlrpcclient5.po
po/hi/: libkxmlrpcclient5.po
po/hne/: libkxmlrpcclient5.po
po/hu/: libkxmlrpcclient5.po
po/ia/: libkxmlrpcclient5.po
po/id/: libkxmlrpcclient5.po
po/it/: libkxmlrpcclient5.po
po/ja/: libkxmlrpcclient5.po
po/ka/: libkxmlrpcclient5.po
po/kk/: libkxmlrpcclient5.po
po/km/: libkxmlrpcclient5.po
po/ko/: libkxmlrpcclient5.po
po/lt/: libkxmlrpcclient5.po
po/lv/: libkxmlrpcclient5.po
po/ml/: libkxmlrpcclient5.po
po/mr/: libkxmlrpcclient5.po
po/nb/: libkxmlrpcclient5.po
po/nds/: libkxmlrpcclient5.po
po/nl/: libkxmlrpcclient5.po
po/nn/: libkxmlrpcclient5.po
po/pa/: libkxmlrpcclient5.po
po/pl/: libkxmlrpcclient5.po
po/pt/: libkxmlrpcclient5.po
po/pt_BR/: libkxmlrpcclient5.po
po/ro/: libkxmlrpcclient5.po
po/ru/: libkxmlrpcclient5.po
po/se/: libkxmlrpcclient5.po
po/sk/: libkxmlrpcclient5.po
po/sl/: libkxmlrpcclient5.po
po/sq/: libkxmlrpcclient5.po
po/sr/: libkxmlrpcclient5.po
po/sr@ijekavian/: libkxmlrpcclient5.po
po/sr@ijekavianlatin/: libkxmlrpcclient5.po
po/sr@latin/: libkxmlrpcclient5.po
po/sv/: libkxmlrpcclient5.po
po/tg/: libkxmlrpcclient5.po
po/tr/: libkxmlrpcclient5.po
po/ug/: libkxmlrpcclient5.po
po/uk/: libkxmlrpcclient5.po
po/zh_CN/: libkxmlrpcclient5.po
po/zh_TW/: libkxmlrpcclient5.po
src/: CMakeLists.txt  client.cpp  client.h  kxmlrpcclient_debug.cpp  kxmlrpcclient_debug.h  kxmlrpcclient_private_export.h  query.cpp  query.h  query_p.h
